--- a/CircleOfInfluenceTool/_Imports.razor
+++ b/CircleOfInfluenceTool/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using CircelOfInfluenceTool
-@using CircelOfInfluenceTool.Layout
+@using CircleOfInfluenceTool
+@using CircleOfInfluenceTool.Layout
