--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1 class="mb-4">Hello, world!</h1>
+@* <h1 class="mb-4">Hello, world!</h1>
 
 <div class="form-group">
     <label for="concern">What are you concerned about?</label>
@@ -62,4 +62,4 @@
             positionCircleOfInfluence = "You are in the Circle of Concern";
         }
     }
-}
+} *@
