--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,3 +1,11 @@
+
+/* Custom */
+.maxWidth {
+    max-width: 400px;
+}
+
+/* End custom */
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -100,10 +108,4 @@ a, .btn-link {
 
 code {
     color: #c02d76;
-}
-
-/* Custom */
-
-.maxWidth {
-    max-width: 400px !important;
 }
