Added the circles
- added the colours and some css for it using co pilot in order to improve my prompt skills :)

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -40,6 +40,16 @@
     </div>
 }
 
+<div class="circle big">
+    <p class="circle-text circle-text-big">Concern</p>
+    <div class="circle medium">
+        <p class="circle-text circle-text-medium">Influence</p>
+        <div class="circle small">
+            <p class="circle-text">Control</p>
+        </div>
+    </div>
+</div>
+
 @code {
     private bool hasInfluence = false;
     private bool hasControl = false;
@@ -82,3 +92,4 @@
         }
     }
 }
+
