--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -3,8 +3,48 @@
 .maxWidth {
     max-width: 400px;
 }
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    border-radius: 50%;
+    position: relative; /* Add this line */
+}
 
-/* End custom */
+.circle-text {
+    position: absolute; /* Add this line */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.circle-text-medium {
+    top: 15%;
+}
+.circle-text-big {
+    top: 10%;
+}
+
+.small {
+    width: 100px;
+    height: 100px;
+    background-color: #009900;
+}
+
+.medium {
+    width: 200px;
+    height: 200px;
+    background-color: #FFA500;
+}
+
+.big {
+    width: 300px;
+    height: 300px;
+    background-color:#FF0000;
+}
+/* End custome */
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
