--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -31,18 +31,33 @@
     width: 100px;
     height: 100px;
     background-color: #009900;
+    border: 2px solid #000000;
 }
 
 .medium {
     width: 200px;
     height: 200px;
     background-color: #FFA500;
+    border: 2px solid #000000;
 }
 
 .big {
     width: 300px;
     height: 300px;
     background-color:#FF0000;
+    border: 2px solid #000000;
+}
+
+.big-light {
+    background-color: #808080; /* Lighter blue */
+}
+
+.medium-light {
+    background-color: #808080; /* Lighter green */
+}
+
+.small-light {
+    background-color: #808080; /* Lighter gray */
 }
 /* End custome */
 
