--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -39,7 +39,7 @@
         <p>Source: <a href="https://positivepsychology.com/circles-of-influence/">Visit PositivePsychology for more information about the Circle of influence</a></p>
     </div>
 
-    <div class="circle big custom-border @(hasInfluence && hasControl ? "" : "big-light")">
+    <div class="circle big custom-border @(!hasInfluence && !hasControl ? "" : "big-light")">
         <p class="circle-text circle-text-big">Concern</p>
         
         <div class="circle medium @(hasInfluence && !hasControl ? "" : "medium-light")">
